--- a/e-commerce-platform/Views/Home/Index.cshtml
+++ b/e-commerce-platform/Views/Home/Index.cshtml
@@ -1,8 +1,83 @@
-﻿@{
+﻿@model List<Product>
+
+@{
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+<head>
+    <style>
+        .card:hover {
+    transform: translateY(-5px);
+    transition: 0.3s ease;
+    }
+    .carousel-item {
+    transition: transform 0.8s ease, opacity 0.8s ease;
+}
+
+</style>
+</head>
+<!-- HERO SECTION -->
+<section id="Sliders">
+    @await Html.PartialAsync("Partials/Site/_sliders",ViewData ["Sliders"])
+</section>
+
+
+
+<section class="py-5">
+    @await Html.PartialAsync("Partials/Site/_categories", ViewData ["Categories"])
+    
+</section>
+
+
+
+<!-- FEATURED PRODUCTS -->
+<section class="bg-light py-5">
+    <div class="container">
+        <h2 class="text-center mb-4 fw-bold">Featured Products</h2>
+        <div class="row">
+
+            @foreach (var product in Model)
+            {
+                <div class="col-md-3 mb-4">
+                    <div class="card h-100 shadow-sm border-0">
+                        <img  src="@product.Images.FirstOrDefault(i => i.IsMain)?.ImageUrl"  class="card-img-top" style="height:200px; object-fit:cover;">
+                        <div class="card-body d-flex flex-column">
+                            <h5 class="card-title">@product.Name</h5>
+                            <p class="card-text text-muted">@product.Price ₺</p>
+                            <a href="#" class="btn btn-dark mt-auto">Add to Cart</a>
+                        </div>
+                    </div>
+                </div>
+            }
+
+        </div>
+    </div>
+</section>
+
+
+<!-- PROMOTION BANNER -->
+<section class="py-5 text-center bg-warning">
+    <div class="container">
+        <h2 class="fw-bold">Limited Time Offer</h2>
+        <p class="lead">Up to 40% discount on selected items!</p>
+        <a href="#" class="btn btn-dark btn-lg">View Deals</a>
+    </div>
+</section>
+
+
+<!-- NEWSLETTER -->
+<section class="py-5 bg-dark text-light">
+    <div class="container text-center">
+        <h3>Subscribe to Our Newsletter</h3>
+        <p>Get updates about new products and special offers.</p>
+        <form class="row justify-content-center">
+            <div class="col-md-4">
+                <input type="email" class="form-control rounded-pill" placeholder="Enter your email">
+            </div>
+            <div class="col-md-2 mt-3 mt-md-0">
+                <button class="btn btn-warning w-100 rounded-pill">Subscribe</button>
+            </div>
+        </form>
+    </div>
+</section>
+
