--- a/e-commerce-platform/Views/Shared/Partials/Site/_categories.cshtml
+++ b/e-commerce-platform/Views/Shared/Partials/Site/_categories.cshtml
@@ -9,7 +9,7 @@
              {
                 <div class="col-md-3 mb-4">
                     <div class="card shadow-sm border-0">
-                        <img src="" class="card-img-top">
+                        <img src="~/img/@item.Image" class="card-img-top">
                         <div class="card-body">
                             <h5>@item.Name</h5>
                         </div>
